deploiement/node.1.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: node-1
  name: node-1
spec:
  selector:
    io.kompose.service: node-1
  ports:
    - name: "33034"
      port: 33034
      targetPort: 33034
    - name: "33035"
      port: 33035
      targetPort: 33035
status:
  loadBalancer: {}
