deploiement/massa.cloud.network.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: massa-cloud-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/massa-cloud-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/massa-cloud-network: "true"
